# telemetry-generator

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: tgen.yaml
src/telemetry_generator/: Position.py  main.py  mqtt_publisher.py  ss_telem.py  vector_class.py
telemetry-generator/: Chart.yaml  values.yaml
telemetry-generator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
telemetry-generator/templates/tests/: test-connection.yaml
