[project]
name = "telemetry-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "qdcannon",email = "qdcannon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chrono (>=1.0.2,<2.0.0)",
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "telemetry_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
